--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,7 +20,7 @@ jobs:
       - run: mkdir -p dist
       - name: Build For Linux
         run: |
-          GOOS=linux GOARCH=amd64 go build -o dist/hawkreq-linux_x86_64.exe ./cmd/hawkreq/
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o dist/hawkreq-linux_x86_64.exe ./cmd/hawkreq/
       - name: Build For Windows
         run: |
           GOOS=windows GOARCH=amd64 go build -o dist/hawkreq-windows_x86_64.exe ./cmd/hawkreq/
